[package]
name = "tenebrae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["board_plugin/debug"]

[dependencies]
bevy = "0.6.1"
board_plugin = { path = "board_plugin" }

#Hierarchy inspector debug
bevy-inspector-egui = "0.9.0"

[workspace]
members = [
    "board_plugin"
]
